--- a/ahh.html
+++ b/ahh.html
@@ -44,61 +44,53 @@ body{
   <!-- Resources Section -->
   <div class="w3-container w3-padding-32" id="resources">
     <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Resources</h3>
-  </div>
+    <div class="w3-col l3 m6 w3-margin-bottom">
+        <div class="w3-display-topleft w3-black w3-padding">Feminism</div>
+         <a href="#feminism"class="w3-button w3-wide w3-light-grey w3-block w3-hover-pale-red" >Feminism</a>
+    </div>
+     <div class="w3-col l3 m6 w3-margin-bottom">
+        <div class="w3-display-topleft w3-black w3-padding">Technology</div>
+         <a href="#technology" class="w3-button w3-wide w3-light-grey w3-block w3-hover-pale-red">Technology</a>
+    </div>
 
-  <div class="w3-row-padding">
-  <!--  <div class="w3-col l3 m6 w3-margin-bottom">
-      <div class="w3-display-container">
-        <div class="w3-display-topleft w3-black w3-padding">Planned Parenthood</div>
-        <img src="planned_parenthood.png" alt="Planned Parenthood" style="width:100%">
-      </div>
+    <div class="w3-col l3 m6 w3-margin-bottom">
+        <div class="w3-display-topleft w3-black w3-padding">Arts</div>
+         <a href="#arts" class="w3-button w3-wide w3-light-grey w3-block w3-hover-pale-red">Arts</a>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
-      <div class="w3-display-container">
-        <div class="w3-display-topleft w3-black w3-padding">Brick House</div>
-        <img src="/w3images/house2.jpg" alt="House" style="width:100%">
-      </div>
-    </div>
-    <div class="w3-col l3 m6 w3-margin-bottom">
-      <div class="w3-display-container">
-        <div class="w3-display-topleft w3-black w3-padding">Renovated</div>
-        <img src="/w3images/house3.jpg" alt="House" style="width:100%">
-      </div>
-    </div>
-    <div class="w3-col l3 m6 w3-margin-bottom">
-      <div class="w3-display-container">
-        <div class="w3-display-topleft w3-black w3-padding">Barn House</div>
-        <img src="/w3images/house4.jpg" alt="House" style="width:100%">
-      </div>
+        <div class="w3-display-topleft w3-black w3-padding">Extra</div>
+         <a href="#extra" class="w3-button w3-wide w3-light-grey w3-block w3-hover-pale-red">Extra</a>
     </div>
   </div>
-
-  <div class="w3-row-padding">
-    <div class="w3-col l3 m6 w3-margin-bottom">
-      <div class="w3-display-container">
-        <div class="w3-display-topleft w3-black w3-padding">Summer House</div>
-        <img src="/w3images/house2.jpg" alt="House" style="width:99%">
-      </div>
+  <div class="w3-container w3-padding-32" id="feminism"><h5><b>Feminism</b></h5>
+  <font size="-.5"><p>TED Talks on Feminism: https://www.ted.com/topics/feminism</p>
+  <p>Feminist: http://feminist.com/</p>
+  <p>Feminist Majority Foundation: http://www.feminist.org/</p>
+  <p>Equality Now: https://www.equalitynow.org/</p>
+    </font>
     </div>
-    <div class="w3-col l3 m6 w3-margin-bottom">
-      <div class="w3-display-container">
-        <div class="w3-display-topleft w3-black w3-padding">Brick House</div>
-        <img src="/w3images/house5.jpg" alt="House" style="width:99%">
-      </div>
+  <div class="w3-container w3-padding-32" id="technology"><h5><b>Women in Technology</b></h5>
+  <font size="-.5"><p>Women Who Code: https://www.womenwhocode.com/<p>
+  <p>Girls Who Code: https://girlswhocode.com/</p>
+  <p>National Center for Women & Information Technology: https://www.ncwit.org/resources</p>
+  <p>Lesbians Who Tech: https://lesbianswhotech.org/about/</p>
+  <p>Hear Me Code: https://hearmecode.com/</p>
+    </font>
     </div>
-    <div class="w3-col l3 m6 w3-margin-bottom">
-      <div class="w3-display-container">
-        <div class="w3-display-topleft w3-black w3-padding">Renovated</div>
-        <img src="/w3images/house4.jpg" alt="House" style="width:99%">
-      </div>
+  <div class="w3-container w3-padding-32" id="arts"><h5><b>Women in the Arts</b></h5>
+  <p>Women in Film: https://womeninfilm.org/</p>
+  <p>WomenArts: https://www.womenarts.org/</p>
+  <p>International Foundation for Women Artists: https://www.ifwartists.org/</p>
+  <p>WomenInMusic: http://www.womeninmusic.org/</p>
+    </font>
     </div>
-    <div class="w3-col l3 m6 w3-margin-bottom">
-      <div class="w3-display-container">
-        <div class="w3-display-topleft w3-black w3-padding">Barn House</div>
-        <img src="/w3images/house3.jpg" alt="House" style="width:99%">
-      </div>
-    </div> -->
-  </div>
+  <div class="w3-container w3-padding-32" id="extra"><h5><b>Extra</b></h5>
+  <p>Poweredbygirl: http://poweredbygirl.org/</p>
+  <p>Hardy Girls Healthy Women: http://hghw.org/</p>
+  <p>National Women’s Business Council: https://www.nwbc.gov/resources</p>
+  <p>Transtech Social Enterprises: http://www.transtechsocial.org/</p>
+    </font>
+    </div>
    <!-- Health Section -->
   <div class="w3-container w3-padding-32" id="health">
     <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Health</h3>
@@ -185,19 +177,18 @@ body{
       </font>
       </div>
     <div class="w3-container w3-padding-32" id="campus_assault"><h5>The lack of security and awareness surrounding <b>sexual assault on college campuses</b> only feeds into this toxic rape culture.</h5>
-     <font size="-.5"> <p>The United States Department of Justice reports that frighteningly,<b> 1 in 4 female undergraduates </b> will be victim to some form of <b>sexual assault</b> before she receives her diploma. While receiving education and learning how to empower and make a life for herself, 25% of women are forced into the submissive roles that plagued women centuries ago in this <b> apparently progressive nation and era </b>. Due to the egregious amount of non-consensual sex in college campuses, an increase in awareness and urgency is necessary to both help and limit the number of victims, as well as ensure that the offenders are served with <b>appropriate jail time</b>. 
+     <font size="-.5"> <p>The United States Department of Justice reports that frighteningly,<b> 1 in 4 female undergraduates </b> will be victim to some form of <b>sexual assault</b> before she receives her diploma. While receiving education and learning how to empower and make a life for herself, 25% of women are forced into the submissive roles that plagued women centuries ago in this <b> apparently progressive nation and era </b>. Due to the egregious amount of non-consensual sex in college campuses, an increase in awareness and urgency is necessary to both help and limit the number of victims, as well as ensure that the offenders are served with <b>appropriate jail time</b>.
 </p>
       <p> RAINN highlights that while a quarter of women are sexually assaulted in college, <b>70% of these crimes remain unreported</b> and of the mere 30% that are reported to the authorities, only 25% of these result in arrest. What is even more chilling is that many of those punished for this heinous crime receive minimal jail time, such as Brock Turner, the unapologetic Stanford rapist who spent three months in jail due to not only the judge’s concern for the criminal’s swim career, but society’s overall acceptance of sexual assault and rapists and the common practice of <b>victim-shaming</b>.  </p>
-      <p> A history of <b>incompetency and neglect</b> on the part of the authorities creates a culture of<b> distrust of the judicial system</b>, which largely contributes to the number of unreported sexual assaults. 
-      In addition, many people, both men and women alike, claim that if a woman were to <b> dress promiscuously</b> or put herself in a vulnerable position (i.e. get drunk), then she deserves the assault. The truth of the matter is that <b>a woman’s body is entitled to no one but herself</b>, and those that practice this victim-blaming promote the notion that women must exercise extreme precautions and <b>limit their personal liberties</b> to prevent men from taking advantage of them.  
+      <p> A history of <b>incompetency and neglect</b> on the part of the authorities creates a culture of<b> distrust of the judicial system</b>, which largely contributes to the number of unreported sexual assaults.
+      In addition, many people, both men and women alike, claim that if a woman were to <b> dress promiscuously</b> or put herself in a vulnerable position (i.e. get drunk), then she deserves the assault. The truth of the matter is that <b>a woman’s body is entitled to no one but herself</b>, and those that practice this victim-blaming promote the notion that women must exercise extreme precautions and <b>limit their personal liberties</b> to prevent men from taking advantage of them.
       </p>
       </font>
-    </div>
-  </div>
+      </div>
     <div class="w3-container w3-padding-32" id="wage_gap"><h5>Is the <b>Wage Gap</b> real?</h5>
       <p>While widely repudiated by self-proclaiming “meninists” and “anti-feminists”, the wage gap continues to antagonize working women across the nation, ensuring that no matter their worth ethic and perseverance, they will still make <b>78 cents to the man’s dollar</b>. While several statistics <b> prove the existence of the wage gap</b>, ignorance continues to depreciate these hard facts. </p>
-  </div>
-  </div>
+      </font>
+      </div>
     <div class="w3-container w3-padding-32" id="trans_women"><h5>The struggles and inequalities that many <b>trans women</b> face</h5>
       <p>oh no</p>
   </div>
@@ -241,11 +232,11 @@ body{
       <img src="/w3images/team4.jpg" alt="Madie" style="width:100%">
       <h3>Madie Yuen</h3>
       <p class="w3-opacity">Co-Founder</p>
-      <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
+      <p>Corgi Corgi</p>
       <p><button class="w3-button w3-light-grey w3-block">Contact</button></p>
     </div>
   </div>
-  
+
 <div class="w3-container w3-padding-32" id="stories">
       <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Share Your Stories</h3>
     </div>
