--- a/ahh.html
+++ b/ahh.html
@@ -191,20 +191,20 @@ body{
       </div>
     <div class="w3-container w3-padding-32" id="trans_women"><h5>The struggles and inequalities that many <b>trans women</b> face</h5>
       <p>oh no</p>
-  </div>
-  </div>
+      </font>
+      </div>
     <div class="w3-container w3-padding-32" id="women_of_color"><h5><b>Women of color</b> face numerous hardships</h5>
       <p>white privilege kids</p>
-  </div>
-  <div class="w3-container w3-padding-32" id="abortion"><h5>Do you want an<b> abortion</b> ?</h5>
+      </div>
+    <div class="w3-container w3-padding-32" id="abortion"><h5>Do you want an<b> abortion</b> ?</h5>
     <p>mo' baby mo' problems</p>
-</div>
-<div class="w3-container w3-padding-32" id="domestic_violencee"><h5><b>Domestic violence</b> toward women</h5>
-  <p>please don't do it thanks!</p>
-</div>
-<div class="w3-container w3-padding-32" id="workplace_harassment"><h5>many women are subject to<b> workplace harassment</b> </h5>
-  <p>Dear men: stop being dildos. I'd call you dicks, but you're too fake.</p>
-</div>
+      </div>
+    <div class="w3-container w3-padding-32" id="domestic_violencee"><h5><b>Domestic violence</b> toward women</h5>
+      <p>please don't do it thanks!</p>
+      </div>
+    <div class="w3-container w3-padding-32" id="workplace_harassment"><h5>many women are subject to<b> workplace harassment</b> </h5>
+      <p>Dear men: stop being dildos. I'd call you dicks, but you're too fake.</p>
+      </div>
 
   <div class="w3-row-padding w3-grayscale">
     <div class="w3-col l3 m6 w3-margin-bottom">
