--- a/ahh.html
+++ b/ahh.html
@@ -1,5 +1,13 @@
 <!DOCTYPE html>
 <html>
+  
+
+
+<link rel="shortcut icon" href="favicon.ico">
+<link rel="icon" type="image/gif" href="animated_favicon1.gif">
+
+
+
 <title>Shattered Glass</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1" background-color: yellow;>
