--- a/ahh.html
+++ b/ahh.html
@@ -79,7 +79,7 @@ body{
     </div>
   <div class="w3-container w3-padding-32" id="technology"><h5><b>Women in Technology</b></h5>
   <font size="-.5"><p>Women Who Code: https://www.womenwhocode.com/<p>
-  <p>Girls Who Code: https://girlswhocode.com/</p>
+  <p><a href="http://girlswhocode.com/">Girls Who Code</a>
   <p>National Center for Women & Information Technology: https://www.ncwit.org/resources</p>
   <p>Lesbians Who Tech: https://lesbianswhotech.org/about/</p>
   <p>Hear Me Code: https://hearmecode.com/</p>
