--- a/ahh.html
+++ b/ahh.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   
-
+<meta name="referrer" content="origin">
 
 <link rel="shortcut icon" href="favicon.ico">
 <link rel="icon" type="image/gif" href="animated_favicon1.gif">
@@ -263,7 +263,7 @@ body{
     </form>-->
     <form method="POST" action="http://formspree.io/mollyrosebrigham@gmail.com">
         <input class="w3-input" type="text" placeholder="Name" required name="Name">
-        <input class="w3-input type="email" name="email" placeholder="Your email">
+        <input class="w3-input type="email" name="_replyto" placeholder="Your email">
         <textarea class="w3-input name="message" placeholder="Your message"></textarea>
         <button class="w3-input type="submit">Send</button>
 </form>
