--- a/ahh.html
+++ b/ahh.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
   
-<meta name="referrer" content="origin">
+<head>
+  <meta name="referrer" content="origin">
+  </head>
 
 <link rel="shortcut icon" href="favicon.ico">
 <link rel="icon" type="image/gif" href="animated_favicon1.gif">
