--- a/ahh.html
+++ b/ahh.html
@@ -265,8 +265,8 @@ body{
     </form>-->
     <form method="POST" action="http://formspree.io/mollyrosebrigham@gmail.com">
         <input class="w3-input" type="text" placeholder="Name" required name="Name">
-        <input class="w3-input type="email" name="name" placeholder="Your email test">
-        <textarea class="w3-input name="message" placeholder="Your message"></textarea>
+        <input class="w3-input type="email" name="name" placeholder="Your email">
+        <textarea class="w3-input name="message" type="text" placeholder="Your message"></textarea>
         <button class="w3-input type="submit">Send</button>
 </form>
   </div>
