--- a/ahh.html
+++ b/ahh.html
@@ -264,9 +264,9 @@ body{
       </button>
     </form>-->
     <form method="POST" action="http://formspree.io/mollyrosebrigham@gmail.com">
-        <input class="w3-input" type="text" placeholder="Name" required name="Name">
+         <textarea class="w3-input name="message" placeholder="Your message"></textarea>
         <input class="w3-input type="email" name="name" placeholder="Your email">
-        <textarea class="w3-input name="message" type="text" placeholder="Your message"></textarea>
+       <!-- <textarea class="w3-input name="message" type="text" placeholder="Your message"></textarea>-->
         <button class="w3-input type="submit">Send</button>
 </form>
   </div>
