--- a/ahh.html
+++ b/ahh.html
@@ -264,10 +264,10 @@ body{
       </button>
     </form>-->
     <form method="POST" action="http://formspree.io/mollyrosebrigham@gmail.com">
-         <textarea class="w3-input name="message" placeholder="Your message"></textarea>
-        <input class="w3-input type="email" name="name" placeholder="Your email">
-       <!-- <textarea class="w3-input name="message" type="text" placeholder="Your message"></textarea>-->
-        <button class="w3-input type="submit">Send</button>
+         <form method="POST" action="http://formspree.io/mollyrosebrigham@gmail.com">
+  <input type="email" name="email" placeholder="Your email">
+  <textarea name="message" placeholder="Your message"></textarea>
+  <button type="submit">Send</button>
 </form>
   </div>
 
