--- a/ahh.html
+++ b/ahh.html
@@ -265,8 +265,8 @@ body{
     </form>-->
     <form method="POST" action="http://formspree.io/mollyrosebrigham@gmail.com">
          <form method="POST" action="http://formspree.io/mollyrosebrigham@gmail.com">
-  <input type="email" name="email" placeholder="Your email">
-  <textarea name="message" placeholder="Your message"></textarea>
+  <input class="w3-input type="email" name="email" placeholder="Your email">
+  <textarea class="w3-input name="message" placeholder="Your message"></textarea>
   <button type="submit">Send</button>
 </form>
   </div>
