--- a/ahh.html
+++ b/ahh.html
@@ -267,7 +267,7 @@ body{
          <form method="POST" action="http://formspree.io/mollyrosebrigham@gmail.com">
   <input class="w3-input type="email" name="email" placeholder="Your email">
   <textarea class="w3-input name="message" placeholder="Your message"></textarea>
-  <button type="submit">Send</button>
+  <button class="w3-input type="submit">Send</button>
 </form>
   </div>
 
