--- a/ahh.html
+++ b/ahh.html
@@ -265,9 +265,9 @@ body{
     </form>-->
     <form method="POST" action="http://formspree.io/mollyrosebrigham@gmail.com">
          <form method="POST" action="http://formspree.io/mollyrosebrigham@gmail.com">
-  <input class="w3-input type="email" name="email" placeholder="Your email">
-  <textarea class="w3-input name="message" placeholder="Your message"></textarea>
-  <button class="w3-input type="submit">Send</button>
+  <input class="w3-input" type="email" name="email" placeholder="Your email">
+  <textarea class="w3-input" name="message" placeholder="Your message"></textarea>
+  <button class="w3-input" type="submit">Send</button>
 </form>
   </div>
 
