--- a/ahh.html
+++ b/ahh.html
@@ -73,32 +73,32 @@ body{
     </div>
   </div>
   <div class="w3-container w3-padding-32" id="feminism"><h5><b>Feminism</b></h5>
-  <font size="-.5"><p>TED Talks on Feminism: https://www.ted.com/topics/feminism</p>
-  <p>Feminist: http://feminist.com/</p>
-  <p>Feminist Majority Foundation: http://www.feminist.org/</p>
-  <p>Equality Now: https://www.equalitynow.org/</p>
+  <font size="-.5"><p><a href="https://www.ted.com/topics/feminism">Ted Talks on Feminism</a></p>
+  <p><a href="http://feminist.com/">Feminist</a></p>
+  <p><a href="http://www.feminist.org/">Feminist Majority Foundation</a></p>
+  <p><a href="https://www.equalitynow.org/">Equality Now</a></p>
     </font>
     </div>
   <div class="w3-container w3-padding-32" id="technology"><h5><b>Women in Technology</b></h5>
-  <font size="-.5"><p>Women Who Code: https://www.womenwhocode.com/<p>
-  <p><a href="http://girlswhocode.com/">Girls Who Code</a>
-  <p>National Center for Women & Information Technology: https://www.ncwit.org/resources</p>
-  <p>Lesbians Who Tech: https://lesbianswhotech.org/about/</p>
-  <p>Hear Me Code: https://hearmecode.com/</p>
+  <font size="-.5"><p><a href= "https://www.womenwhocode.com/">Women Who Code</a><p>
+  <p><a href="https://girlswhocode.com/">Girls Who Code</a></p>
+  <p><a href="https://www.ncwit.org/resources">National Center for Women & Information Technology</a></p>
+  <p><a href="https://lesbianswhotech.org/about/">Lesbians Who Tech</a></p>
+  <p><a href="https://hearmecode.com/">Hear Me Code</a></p>
     </font>
     </div>
   <div class="w3-container w3-padding-32" id="arts"><h5><b>Women in the Arts</b></h5>
-  <p>Women in Film: https://womeninfilm.org/</p>
-  <p>WomenArts: https://www.womenarts.org/</p>
-  <p>International Foundation for Women Artists: https://www.ifwartists.org/</p>
-  <p>WomenInMusic: http://www.womeninmusic.org/</p>
+  <p><a href="https://womeninfilm.org/">Women in Film</a></p>
+  <p><a href="https://www.womenarts.org/">Women Arts</a></p>
+  <p><a href="https://www.ifwartists.org/">International Foundaion for Women in Arts</a></p>
+  <p><a href="http://www.womeninmusic.org/">Women in Music</a></p>
     </font>
     </div>
   <div class="w3-container w3-padding-32" id="extra"><h5><b>Extra</b></h5>
-  <p>Poweredbygirl: http://poweredbygirl.org/</p>
-  <p>Hardy Girls Healthy Women: http://hghw.org/</p>
-  <p>National Women’s Business Council: https://www.nwbc.gov/resources</p>
-  <p>Transtech Social Enterprises: http://www.transtechsocial.org/</p>
+  <p><a href="http://poweredbygirl.org/">Powered by Girl</a></p>
+  <p><a href="http://hghw.org/">Hearty Girls Healthy Women</a></p>
+  <p><a href="https://www.nwbc.gov/resources">National Women's Business Council</a></p>
+  <p><a href="http://www.transtechsocial.org/">Transtech Social Enterprises</a></p>
     </font>
     </div>
    <!-- Health Section -->
