--- a/ahh.html
+++ b/ahh.html
@@ -222,28 +222,28 @@ body{
       <h3>Molly Brigham</h3>
       <p class="w3-opacity">Co-Founder</p>
       <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
-      <p><button class="w3-button w3-light-grey w3-block">Contact</button></p>
+      <!--<p><button class="w3-button w3-light-grey w3-block">Contact</button></p>-->
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
       <img src="/w3images/team1.jpg" alt="Taima" style="width:100%">
       <h3>Taima Crean</h3>
       <p class="w3-opacity">Co-Founder</p>
       <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
-      <p><button class="w3-button w3-light-grey w3-block">Contact</button></p>
+     <!-- <p><button class="w3-button w3-light-grey w3-block">Contact</button></p>-->
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
       <img src="/w3images/team3.jpg" alt="Madeleine" style="width:100%">
       <h3>Madeleine Nations</h3>
       <p class="w3-opacity">Co-Founder</p>
       <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
-      <p><button class="w3-button w3-light-grey w3-block">Contact</button></p>
+      <!--<p><button class="w3-button w3-light-grey w3-block">Contact</button></p>-->
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
       <img src="/w3images/team4.jpg" alt="Madie" style="width:100%">
       <h3>Madie Yuen</h3>
       <p class="w3-opacity">Co-Founder</p>
       <p>Corgi Corgi</p>
-      <p><button class="w3-button w3-light-grey w3-block">Contact</button></p>
+      <!--<p><button class="w3-button w3-light-grey w3-block">Contact</button></p>-->
     </div>
   </div>
 
