--- a/ahh.html
+++ b/ahh.html
@@ -253,7 +253,7 @@ body{
   <!-- Contact Section -->
   <div class="w3-container w3-padding-32" id="contact">
     <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Contact</h3>
-    <p>We want to hear from you! How can we improve our website and resources to fit your needs? Whether you have any critique or not, please reach out to us!</p>
+    <p>We want to hear from you! How can we improve our website and resources to fit your needs? Whether you have any critique or not, please reach out to us! If you need any advice as well, we are happy to help. </p>
       <!--<form action="/action_page.php" target="_blank">
       <input class="w3-input" type="text" placeholder="Name" required name="Name">
       <input class="w3-input w3-section" type="text" placeholder="Email" required name="Email">
