--- a/ahh.html
+++ b/ahh.html
@@ -249,6 +249,9 @@ body{
 
 <div class="w3-container w3-padding-32" id="stories">
       <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Share Your Stories</h3>
+  <p> We want this website to be helpful to everyone, and while we have many resources, one of the most important resources is examples of personal experience! If you have any advice, want an outlet to safely share your story without fear of judgement, or want to ask for help, please post here!</p>
+      <input class="w3-input" type="text" placeholder="Share your story!" required name="Share your story!"
+      <button class=w3-button w3-black w3-section" type="submit">
     </div>
   <!-- Contact Section -->
   <div class="w3-container w3-padding-32" id="contact">
