--- a/ahh.html
+++ b/ahh.html
@@ -55,6 +55,10 @@ body{
   <div class="w3-container w3-padding-32" id="resources">
     <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Resources</h3>
     <div class="w3-col l3 m6 w3-margin-bottom">
+        <div class="w3-display-topleft w3-black w3-padding">Salary</div>
+         <a href="#salary"class="w3-button w3-wide w3-light-grey w3-block w3-hover-pale-red" >Salary</a>
+    </div>
+    <div class="w3-col l3 m6 w3-margin-bottom">
         <div class="w3-display-topleft w3-black w3-padding">Feminism</div>
          <a href="#feminism"class="w3-button w3-wide w3-light-grey w3-block w3-hover-pale-red" >Feminism</a>
     </div>
@@ -72,6 +76,8 @@ body{
          <a href="#extra" class="w3-button w3-wide w3-light-grey w3-block w3-hover-pale-red">Extra</a>
     </div>
   </div>
+  <div class="w3-container w3-padding-32" id="fsalary"><h5><b>Salary</b></h5>
+    <p> Calculate what salary you should be asking for.</p>
   <div class="w3-container w3-padding-32" id="feminism"><h5><b>Feminism</b></h5>
   <font size="-.5"><p><a href="https://www.ted.com/topics/feminism">Ted Talks on Feminism</a></p>
   <p><a href="http://feminist.com/">Feminist</a></p>
