--- a/ahh.html
+++ b/ahh.html
@@ -31,6 +31,7 @@ body{
     <a href="#home" class="w3-bar-item w3-button"><b>SHATTERED</b> GLASS</a>
     <!-- Float links to the right. Hide them on small screens -->
     <div class="w3-right w3-hide-small">
+      <a href="#salary" class="w3-bar-item w3-button">Salary</a>
       <a href="#resources" class="w3-bar-item w3-button">Resources</a>
       <a href="#health" class="w3-bar-item w3-button">Health</a>
       <a href="#education" class="w3-bar-item w3-button">Education</a>
@@ -50,14 +51,14 @@ body{
 
 <!-- Page content -->
 <div class="w3-content w3-padding" style="max-width:1564px">
-
+<div class="w3-container w3-padding-32" id="salary">
+    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Salary</h3>
+  <p> Calculate what salary you should be asking for </p>
+  </div>
   <!-- Resources Section -->
   <div class="w3-container w3-padding-32" id="resources">
     <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Resources</h3>
-    <div class="w3-col l3 m6 w3-margin-bottom">
-        <div class="w3-display-topleft w3-black w3-padding">Salary</div>
-         <a href="#salary"class="w3-button w3-wide w3-light-grey w3-block w3-hover-pale-red" >Salary</a>
-    </div>
+    
     <div class="w3-col l3 m6 w3-margin-bottom">
         <div class="w3-display-topleft w3-black w3-padding">Feminism</div>
          <a href="#feminism"class="w3-button w3-wide w3-light-grey w3-block w3-hover-pale-red" >Feminism</a>
@@ -76,8 +77,7 @@ body{
          <a href="#extra" class="w3-button w3-wide w3-light-grey w3-block w3-hover-pale-red">Extra</a>
     </div>
   </div>
-  <div class="w3-container w3-padding-32" id="fsalary"><h5><b>Salary</b></h5>
-    <p> Calculate what salary you should be asking for.</p>
+ 
   <div class="w3-container w3-padding-32" id="feminism"><h5><b>Feminism</b></h5>
   <font size="-.5"><p><a href="https://www.ted.com/topics/feminism">Ted Talks on Feminism</a></p>
   <p><a href="http://feminist.com/">Feminist</a></p>
