--- a/ahh.html
+++ b/ahh.html
@@ -51,9 +51,13 @@ body{
 
 <!-- Page content -->
 <div class="w3-content w3-padding" style="max-width:1564px">
+  <!-- Salary Section -->
+  
 <div class="w3-container w3-padding-32" id="salary">
     <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Salary</h3>
   <p> Calculate what salary you should be asking for </p>
+  <p> Input your <b> location</b>: </p>
+  <p> Input your <b>job</b>: </p>
   </div>
   <!-- Resources Section -->
   <div class="w3-container w3-padding-32" id="resources">
