--- a/ahh.html
+++ b/ahh.html
@@ -56,8 +56,8 @@ body{
 <div class="w3-container w3-padding-32" id="salary">
     <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Salary</h3>
   <p> Calculate what salary you should be asking for </p>
-  <p> Input your <b> location</b>: </p>
-  <p> Input your <b>job</b>: </p>
+  <p> Input your <b> location</b>: <input class="w3-input" type="location" name="location" placeholder="Your city"></p>
+  <p> Input your <b>job</b>: <input class="w3-input" type="job" name="job" placeholder="Your job"></p>
   </div>
   <!-- Resources Section -->
   <div class="w3-container w3-padding-32" id="resources">
