--- a/ahh.html
+++ b/ahh.html
@@ -58,6 +58,9 @@ body{
   <p> Calculate what salary you should be asking for </p>
   <p> Input your <b> location</b>: <input class="w3-input" type="location" name="location" placeholder="Your city"></p>
   <p> Input your <b>job</b>: <input class="w3-input" type="job" name="job" placeholder="Your job"></p>
+  <button class="w3-button w3-black w3-section" type="submit">
+        <i class="fa fa-paper-plane"></i> CALCULATE MY SALARY
+      </button>
   </div>
   <!-- Resources Section -->
   <div class="w3-container w3-padding-32" id="resources">
