--- a/ahh.html
+++ b/ahh.html
@@ -57,7 +57,7 @@ body{
     <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Salary</h3>
   <p> Calculate what salary you should be asking for </p>
   <p> Input your <b> location</b>: <input class="w3-input" type="location" name="location" placeholder="Your city"></p>
-  <p> Input your <b>job</b>: <textarea rows="1" cols="20" class="w3-input" type="job" name="job" placeholder="Your job"></p>
+  <p> Input your <b>job</b>: <input class="w3-input" type="job" name="job" placeholder="Your job"></p>
   <button class="w3-button w3-black w3-section" type="submit">
         <i class="fa fa-paper-plane"></i> CALCULATE MY SALARY
       </button>
