--- a/ahh.html
+++ b/ahh.html
@@ -209,7 +209,8 @@ body{
       </font>
       </div>
     <div class="w3-container w3-padding-32" id="wage_gap"><h5>Is the <b>Wage Gap</b> real?</h5>
-      <p>While widely repudiated by self-proclaiming “meninists” and “anti-feminists”, the wage gap continues to antagonize working women across the nation, ensuring that no matter their worth ethic and perseverance, they will still make <b>78 cents to the man’s dollar</b>. While several statistics <b> prove the existence of the wage gap</b>, ignorance continues to depreciate these hard facts. </p>
+      <p>While widely repudiated by self-proclaiming “meninists” and “anti-feminists”, the wage gap continues to antagonize working women across the nation, ensuring that no matter their worth ethic and perseverance, they will still make <b>78 cents to the man’s dollar</b>. While several statistics <b> prove the existence of the wage gap</b>, ignorance continues to depreciate these hard facts. Many more conservative outlets claim that men and women make <b> different choices</b< that lead to the salary disparities; according to these sources, men generally choose more dangerous and more high-paying jobs that require<b> more commitment</b>, and that even within the same field,<b> men work harder </b>and choose more rigorous job specifications, and thus deserve a higher salary. While many people hold these “facts” to be indubitable, many reliable news sources highlight several disconcerting statistics that in short, display that even while <b>female college education outweighs that of males</b>, and though men and women hold <b>similar jobs</b>, men are paid more. Here are more specific statistics: 
+ </p>
       </font>
       </div>
     <div class="w3-container w3-padding-32" id="trans_women"><h5>The struggles and inequalities that many <b>trans women</b> face</h5>
