--- a/ahh.html
+++ b/ahh.html
@@ -213,6 +213,7 @@ body{
  </p>
       </font>
     <img src="wagegap.png" alt="Lifetime Wage Gap for Women Compared with Men" style="width:304px;height:228px;">
+   <p> <a href= "https://nwlc.org/resources/the-lifetime-wage-gap-state-by-state/" <See the wage gap for different races></a></p>
       </div>
     <div class="w3-container w3-padding-32" id="trans_women"><h5>The struggles and inequalities that many <b>trans women</b> face</h5>
       <p>oh no</p>
