--- a/ahh.html
+++ b/ahh.html
@@ -213,7 +213,7 @@ body{
  </p>
       </font>
     <img src="wagegap.png" alt="Lifetime Wage Gap for Women Compared with Men" style="width:304px;height:273.6px;">
-   <p><a href="https://nwlc.org/resources/the-lifetime-wage-gap-state-by-state/">View the gender gap for different races here.</a></p>
+   <p><a target="_blank" href="https://nwlc.org/resources/the-lifetime-wage-gap-state-by-state/">View the gender gap for different races here.</a></p>
       </div>
     <div class="w3-container w3-padding-32" id="trans_women"><h5>The struggles and inequalities that many <b>trans women</b> face</h5>
       <p>oh no</p>
