--- a/ahh.html
+++ b/ahh.html
@@ -216,7 +216,8 @@ body{
    <p><a target="_blank" href="https://nwlc.org/resources/the-lifetime-wage-gap-state-by-state/"><font size="-1.5">View the gender gap for different races here.</font></a></p>
     
     <img src="education.png" alt="Women earn less 10 years after enrolling than men do six years after enrolling" style="width:364.8px;height:273.6px;">
-    
+    <img src="diploma.png" alt="Salary vs. Education" style="width:364.8px; height:273.6px;">
+    <img src="job.png" alt="As Women Take Over a Male-Dominated Field, the Pay Drops" style="width:364.8px; height=273.6px;">
     <p><a target="_blank" href="https://www.bustle.com/p/8-wage-gap-statistics-to-shut-down-any-haters-48441"><font size="-1.5">Source</font></a></p>
   </div>
     <div class="w3-container w3-padding-32" id="trans_women"><h5>The struggles and inequalities that many <b>trans women</b> face</h5>
