--- a/ahh.html
+++ b/ahh.html
@@ -312,23 +312,27 @@ body {font-family: Verdana,sans-serif;margin:0}
 <div class="slideshow-container">
 
 <div class="mySlides fade">
-  <div class="numbertext">1 / 3</div>
-  <img src="img_nature_wide.jpg" style="width:100%">
+  <div class="numbertext">1 / 4</div>
+  <img src="wagegap.png" style="width:100%">
   <div class="text">Caption Text</div>
 </div>
 
 <div class="mySlides fade">
-  <div class="numbertext">2 / 3</div>
-  <img src="img_fjords_wide.jpg" style="width:100%">
+  <div class="numbertext">2 / 4</div>
+  <img src="education.png" style="width:100%">
   <div class="text">Caption Two</div>
 </div>
 
 <div class="mySlides fade">
-  <div class="numbertext">3 / 3</div>
-  <img src="img_mountains_wide.jpg" style="width:100%">
+  <div class="numbertext">3 / 4</div>
+  <img src="diploma.png" style="width:100%">
   <div class="text">Caption Three</div>
 </div>
-
+<div class="mySlides fade">
+  <div class="numbertext">4 / 4</div>
+  <img src="job.png" style="width:100%">
+  <div class="text">Caption Three</div>
+</div>
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 
