--- a/ahh.html
+++ b/ahh.html
@@ -41,7 +41,7 @@ body {font-family: Verdana,sans-serif;margin:0}
   width: auto;
   padding: 16px;
   margin-top: -22px;
-  color: white;
+  color: black;
   font-weight: bold;
   font-size: 18px;
   transition: 0.6s ease;
