--- a/ahh.html
+++ b/ahh.html
@@ -60,7 +60,7 @@ body {font-family: Verdana,sans-serif;margin:0}
 }
 
 .text {
-  color: #f2f2f2;
+  color: #000000;
   font-size: 15px;
   padding: 8px 12px;
   position: absolute;
