--- a/ahh.html
+++ b/ahh.html
@@ -314,24 +314,24 @@ body {font-family: Verdana,sans-serif;margin:0}
 <div class="mySlides fade">
   <div class="numbertext">1 / 4</div>
   <img src="wagegap.png" style="width:100%">
-  <div class="text">Caption Text</div>
+  <div class="text">Lifetime Wage Gap for Women Compared with Men</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">2 / 4</div>
   <img src="education.png" style="width:100%">
-  <div class="text">Caption Two</div>
+  <div class="text">Women earn less 10 years after enrolling than men do six years after enrolling</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">3 / 4</div>
   <img src="diploma.png" style="width:100%">
-  <div class="text">Caption Three</div>
+  <div class="text">Salary vs. Education</div>
 </div>
 <div class="mySlides fade">
   <div class="numbertext">4 / 4</div>
   <img src="job.png" style="width:100%">
-  <div class="text">Caption Three</div>
+  <div class="text">As Women Take Over a Male-Dominated Field, the Pay Drops</div>
 </div>
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
