--- a/ahh.html
+++ b/ahh.html
@@ -29,7 +29,7 @@ body {font-family: Verdana,sans-serif;margin:0}
 
 .slideshow-container {
   max-width: 1000px;
-  position: relative;
+  position: center;
   margin: auto;
 }
 
