--- a/ahh.html
+++ b/ahh.html
@@ -29,7 +29,7 @@ body {font-family: Verdana,sans-serif;margin:0}
 
 .slideshow-container {
   max-width: 1000px;
-  position: center;
+  position: relative;
   margin: auto;
 }
 
@@ -62,9 +62,9 @@ body {font-family: Verdana,sans-serif;margin:0}
 .text {
   color: #000000;
   font-size: 15px;
-  padding: 8px 12px;
+  padding: 16px 24px;
   position: absolute;
-  bottom: 8px;
+  bottom: 16px;
   width: 100%;
   text-align: center;
 }
