--- a/ahh.html
+++ b/ahh.html
@@ -383,7 +383,7 @@ function showSlides(n) {
     <div class="w3-container w3-padding-32" id="trans_women"><h5>The struggles and inequalities that many <b>trans women</b> face</h5>
       <p><i>It is revolutionary for any trans person to choose to be seen and visible in a world that tells us we should not exist</i>  --Laverne Cox</p>
         
-      <p>While women already face several hardships due to societal biases against them, the <b>struggle for equality and basic human rights</b> is more treacherous for transgender women, or women who were assigned with the wrong gender at birth. 
+      <p>While women already face several hardships due to societal biases against them, the <b>struggle for equality, safety, and basic human rights</b> is more treacherous for transgender women, or women who were assigned with the wrong gender at birth. 
       </font>
       </div>
     <div class="w3-container w3-padding-32" id="women_of_color"><h5><b>Women of color</b> face numerous hardships</h5>
