--- a/ahh.html
+++ b/ahh.html
@@ -384,7 +384,7 @@ function showSlides(n) {
       <p><i>It is revolutionary for any trans person to choose to be seen and visible in a world that tells us we should not exist</i>  --Laverne Cox</p>
         
       <p>While women already face several hardships due to societal biases against them, the <b>struggle for equality, safety, and basic human rights</b> is more treacherous for transgender women, or women who were assigned with the wrong gender at birth. The estimated <b>1.4 million</b> trans people in the U.S. are consistently ridiculed and bullied for their identity, and even those who claim to support the trans community have several biases and lack cognizance of the realities that trans people face. 
-
+          Specifically, <b>trans women</b> account for <b>72 percent of anti-LGBTQ homicide victims</b>. </p>
       </font>
       </div>
     <div class="w3-container w3-padding-32" id="women_of_color"><h5><b>Women of color</b> face additional hardships due to institutionalized racism</h5>
