--- a/ahh.html
+++ b/ahh.html
@@ -25,7 +25,7 @@ body{
 }
   h5.four {
     border-style: solid;
-    border-color: #ff0000 #00ff00 #0000ff;
+    border-color: #FFB6C1 #add8e6 #FFFFFF;
 }
   * {box-sizing:border-box}
 body {font-family: Verdana,sans-serif;margin:0}
