--- a/ahh.html
+++ b/ahh.html
@@ -26,6 +26,7 @@ body{
   h5.four {
     border-style: solid;
     border-color: #FFB6C1 #add8e6 #FFFFFF;
+    border-width: 20px;
 }
   * {box-sizing:border-box}
 body {font-family: Verdana,sans-serif;margin:0}
