--- a/ahh.html
+++ b/ahh.html
@@ -385,11 +385,12 @@ function showSlides(n) {
     <p><a target="_blank" href="https://www.bustle.com/p/8-wage-gap-statistics-to-shut-down-any-haters-48441"><font size="-1.5">Source</font></a></p>
  -->
 </div>
-    <div class="w3-container w3-padding-32" id="trans_women"><p class="four"><font size="+.5">The struggles and inequalities that many <b>trans women</b> face</font><br>
+    <div class="w3-container w3-padding-32" id="trans_women"><p class="four"><font size="+.5"><br>The struggles and inequalities that many <b>trans women</b> face</font><br>
       <i>It is revolutionary for any trans person to choose to be seen and visible in a world that tells us we should not exist</i>  --Laverne Cox<br>
         
       While women already face several hardships due to societal biases against them, the <b>struggle for equality, safety, and basic human rights</b> is more treacherous for transgender women, or women who were assigned with the wrong gender at birth. The estimated <b>1.4 million</b> trans people in the U.S. are consistently ridiculed and bullied for their identity, and even those who claim to support the trans community have several biases and lack cognizance of the realities that trans people face. 
           Specifically, <b>trans women</b> account for <b>72 percent of anti-LGBTQ homicide victims</b>. <br><img src="tstats.png" alt="Invisible, Not Imaginary: Transgender STD Statistics" width="277.9" height="279.3"></p>
+     <br>
       </font>
 
       </div>
