--- a/ahh.html
+++ b/ahh.html
@@ -412,7 +412,7 @@ function showSlides(n) {
       <img src="/w3images/team2.jpg" alt="Molly" style="width:100%">
       <h3>Molly Brigham</h3>
       <p class="w3-opacity">Co-Founder</p>
-      <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
+      <p>Junior at National Cathedral School. I love sexism. Love it.</p>
       <!--<p><button class="w3-button w3-light-grey w3-block">Contact</button></p>-->
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
