--- a/ahh.html
+++ b/ahh.html
@@ -389,7 +389,7 @@ function showSlides(n) {
       <i>It is revolutionary for any trans person to choose to be seen and visible in a world that tells us we should not exist</i>  --Laverne Cox<br>
         
       While women already face several hardships due to societal biases against them, the <b>struggle for equality, safety, and basic human rights</b> is more treacherous for transgender women, or women who were assigned with the wrong gender at birth. The estimated <b>1.4 million</b> trans people in the U.S. are consistently ridiculed and bullied for their identity, and even those who claim to support the trans community have several biases and lack cognizance of the realities that trans people face. 
-          Specifically, <b>trans women</b> account for <b>72 percent of anti-LGBTQ homicide victims</b>. <br><br>While many feminists discount and separate trans women from the majority of women due to their “life of male privilege prior to transition”, they receive the <b>same discriminations that cis women face and more</b>.<br><br> <img src="tstats.png" alt="Invisible, Not Imaginary: Transgender STD Statistics" width="277.9" height="279.3"><br><br></p>
+          Specifically, <b>trans women</b> account for <b>72 percent of anti-LGBTQ homicide victims</b>. <br><br>Many feminists discount the struggles of trans women and <b>separate them from cisgender women</b> due to their “life of male privilege prior to transition”. However, while they did not receive the same sexist treatment as cis women until their transition, they <b>lack the privilege of universal acceptance</b> and respect of their gender. <br><br> <img src="tstats.png" alt="Invisible, Not Imaginary: Transgender STD Statistics" width="277.9" height="279.3"><br><br></p>
      
       </font>
 
